# birch-tree

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: birch_tree.cpp  birch_tree.hpp  file.hpp  main.cpp  util.hpp
